# cm3588-fan

./: Cargo.toml  Dockerfile  Justfile  Makefile  README.md  cm3588-fan.service  default.nix  fan-cm3588.service  mise.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  release.yml  test.yml
kernel-module/: ..module-common.o.cmd  .Module.symvers.cmd  .cm3588_fan_kmod.ko.cmd  .cm3588_fan_kmod.mod.cmd  .cm3588_fan_kmod.mod.o.cmd  .cm3588_fan_kmod.o.cmd  .modules.order.cmd  Makefile  README.md  cm3588_fan_kmod.c  cm3588_fan_kmod.ko  cm3588_fan_kmod.mod  cm3588_fan_kmod.mod.c  modules.order
src/: checker.rs  cheker.rs  config.rs  fan.rs  lib.rs  main.rs  temp.rs
tests/: integration_test.rs
