[package]
name = "cm3588-fan"
version = "0.2.8"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
description = "Control your cm355 fan"
homepage = "https://github.com/martabal/cm3588-fan"
repository = "https://github.com/martabal/cm3588-fan"

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

[lints.clippy]
missing_panics_doc = "allow"
missing_errors_doc = "allow"
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
